--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<title>Color Game</title>
 </head>
 <body>
-	<h1>Welcome To DevOps Training In Telugu Batch 20 & 21 By Sreeharsha Veerapalli</h1>
-	<h1>Ansible Playbook Testing With Tags</h1>
+	<h1>Welcome To the war goround we're about to enter the world of war </h1>
+	<h1>testing terraform provisioners </h1>
+	<h1>testing phase-1 </h1>
 	<div id="smallcont">
 		<div></div>
 		<div id="try1">Lets Play</div>
